[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fuzzyHSA"
version = "0.2.0"
description = "KFD/GPU Firmware Fuzzer for AMD GPUs"
authors = [{name = "Zachary Streeter"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: Security",
]

[project.scripts]
fuzzyHSA = "fuzzyHSA.cli:main"

[dependency-groups]
dev = [
    "ctypesgen>=1.1.1",
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fuzzyHSA"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require AMD GPU hardware)",
]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
